@@ -2,6 +2,7 @@ Revision history for libev, a high-performance and full-featured event loop.
 
 TODO: ev_walk
 TODO: remain
+TODO: on_call_pending, on_suspend_resume ev_invoke_pending (EV_P)
 	- ev_unloop and ev_loop wrongly used a global variable to exit loops,
           instead of using a per-loop variable (bug caught by accident...).
 	- Denis F. Latypoff corrected many typos in example code snippets.
@@ -11,7 +12,8 @@ TODO: remain
           use it (reported by ry@tinyclouds).
         - use GetSystemTimeAsFileTime instead of _timeb on windows, for
           slightly higher accuracy.
-        - properly declare ev_loop_verify even when !EV_MULTIPLICITY.
+        - properly declare ev_loop_verify and ev_now_update even when
+          !EV_MULTIPLICITY.
         - implement ev_loop_depth.
         - do not compile in any priority code when EV_MAXPRI == EV_MINPRI.
 
